remove not needed and update

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gatsby-starter-netlify-cms",
   "description": "Example Gatsby, and Netlify CMS project",
-  "version": "1.1.3",
-  "author": "Austin Green",
+  "version": "0.0.1",
+  "author": "Philip Wisner",
   "dependencies": {
     "bulma": "^0.8.0",
     "gatsby": "^2.13.31",
